use gradle version catalog